# auditgate

./: .gitignore  CANONICAL_JSON.md  LICENSE  README.md  SEMANTICS.md  pyproject.toml
auditgate/: __init__.py  __main__.py  cli.py  core.py  engine.py  store.py
examples/: basic_audit.py  bench_auditgate.py  compose_with_gates.py  fail_closed_guarantee.py
schemas/: auditgate-entry.schema.json
tests/: test_async.py  test_auditgate.py  test_cli.py  test_golden_vectors.py
