[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auditgate"
version = "0.1.1"
description = "Compliance-grade audit logging for agent systems."
readme = "README.md"
license = "BUSL-1.1"
requires-python = ">=3.12"
authors = [
    { name = "ActionGate OSS", email = "actiongate-oss@users.noreply.github.com" }
]
keywords = [
    "audit",
    "compliance",
    "ai-agents",
    "llm",
    "tamper-evident",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/actiongate-oss/auditgate"
Documentation = "https://github.com/actiongate-oss/auditgate#readme"
Repository = "https://github.com/actiongate-oss/auditgate"

[tool.hatch.build.targets.wheel]
packages = ["auditgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
